support jdk21